# com2058

./: .gitignore  docker-compose.yml
phase3/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
phase3/frontend/: .dockerignore  Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
phase3/frontend/src/: App.tsx  index.css  main.tsx
phase3/frontend/src/components/: CountUp.tsx  EmptyState.tsx  ErrorBoundary.tsx  GradientMesh.tsx  Layout.tsx  Loading.tsx  MagneticButton.tsx  Marquee.tsx  RouteGuards.tsx  SectionReveal.tsx  SpotlightCursor.tsx  StatusBadge.tsx  TextReveal.tsx  TiltCard.tsx
phase3/frontend/src/lib/: api.ts  logger.ts  store.ts
phase3/frontend/src/pages/: AdminPage.tsx  DashboardPage.tsx  HomePage.tsx  NotFoundPage.tsx  OrderDetailPage.tsx  OrdersListPage.tsx  ProductDetailPage.tsx  StorefrontPage.tsx
phase3/scripts/: init_db.py  seed.py
phase3/slides/: presentation.html  presentation.md
phase3/sql/: 001_schema.sql  002_views.sql  003_triggers.sql  004_json_showcase.sql  005_explain_notes.sql  999_showcase_queries.sql
phase3/src/storecraft/: __init__.py  config.py  db.py  errors.py  logging_config.py  main.py  middleware.py
phase3/src/storecraft/models/: __init__.py  catalog.py  commerce.py  engagement.py  identity.py  inventory.py
phase3/src/storecraft/queries/: showcase.py
phase3/src/storecraft/routers/: __init__.py  admin.py  api.py  catalog.py  dashboard.py  home.py  orders.py
phase3/tests/: conftest.py  test_api.py  test_e2e.py  test_models.py  test_queries.py
(+35 files in other folders)
