[project]
name = "storecraft"
version = "0.1.0"
description = "StoreCraft — multi-tenant e-commerce platform (COM2058 Phase 3)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Berk Kırık", email = "berkkirik.1999@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "cryptography>=42",
    "alembic>=1.13",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "faker>=30",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[project.scripts]
storecraft-seed = "storecraft.scripts.seed:main"
storecraft-init-db = "storecraft.scripts.init_db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/storecraft"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --cov=storecraft --cov-report=term-missing"
